# LinearWang

./: CMakeLists.txt  README.md
src/: board.cpp  board.h  coloring.h  cycle_solver.cpp  cycle_solver.h  general.cpp  general.h  main.cpp  output.cpp  output.h  tree_solver.cpp  tree_solver.h  wang.cpp  wang.h
